fix spacing

--- a/purrfectpal/styles/community.css
+++ b/purrfectpal/styles/community.css
@@ -147,6 +147,7 @@ nav.show {
 .image-container {
     display: flex;
     flex-direction: column;
+    margin: 20px;
     align-items: space-around;
     justify-content: center;
     width: 100%;
